- Add swagger api docs for `user`, `token`, and `variable`
