# backend/routes/user.go
@@ -25,6 +25,15 @@ type UserRequestData struct {
 	Email    string `json:"email"`
 }
 
+// @Summary Get user
+// @Description user
+// @Tags user
+// @Produce json
+// @Param Authorization header string true "Authorization token"
+// @Param id path string true "user id"
+// @Success 200 json string Response
+// @Failure 400 json string Response
+// @Router /users/{id} [get]
 func GetUser(c *gin.Context) {
 	id := c.Param("id")
 
@@ -41,6 +50,15 @@ func GetUser(c *gin.Context) {
 	})
 }
 
+// @Summary Get user list
+// @Description Get user list
+// @Tags token
+// @Produce json
+// @Param Authorization header string true "Authorization token"
+// @Param data body routes.UserListRequestData true "data body"
+// @Success 200 json string Response
+// @Failure 400 json string Response
+// @Router /users [get]
 func GetUserList(c *gin.Context) {
 	// 绑定数据
 	data := UserListRequestData{}
@@ -82,6 +100,15 @@ func GetUserList(c *gin.Context) {
 	})
 }
 
+// @Summary Put user
+// @Description Put user
+// @Tags user
+// @Produce json
+// @Param Authorization header string true "Authorization token"
+// @Param reqData body routes.UserRequestData true "reqData body"
+// @Success 200 json string Response
+// @Failure 400 json string Response
+// @Router /users [put]
 func PutUser(c *gin.Context) {
 	// 绑定请求数据
 	var reqData UserRequestData
@@ -115,6 +142,16 @@ func PutUser(c *gin.Context) {
 	})
 }
 
+// @Summary Post user
+// @Description Post user
+// @Tags user
+// @Produce json
+// @Param Authorization header string true "Authorization token"
+// @Param item body model.User true "user body"
+// @Param id path string true "user id"
+// @Success 200 json string Response
+// @Failure 400 json string Response
+// @Router /users/{id} [post]
 func PostUser(c *gin.Context) {
 	id := c.Param("id")
 
@@ -143,6 +180,15 @@ func PostUser(c *gin.Context) {
 	})
 }
 
+// @Summary Delete user
+// @Description Delete user
+// @Tags user
+// @Produce json
+// @Param Authorization header string true "Authorization token"
+// @Param id path string true "user id"
+// @Success 200 json string Response
+// @Failure 400 json string Response
+// @Router /users/{id} [delete]
 func DeleteUser(c *gin.Context) {
 	id := c.Param("id")
 
