# backend/routes/variable.go
@@ -8,6 +8,16 @@ import (
 )
 
 // 新增
+
+// @Summary Put variable
+// @Description Put variable
+// @Tags variable
+// @Produce json
+// @Param Authorization header string true "Authorization token"
+// @Param variable body model.Variable true "reqData body"
+// @Success 200 json string Response
+// @Failure 400 json string Response
+// @Router /variable [put]
 func PutVariable(c *gin.Context) {
 	var variable model.Variable
 	if err := c.ShouldBindJSON(&variable); err != nil {
@@ -22,6 +32,17 @@ func PutVariable(c *gin.Context) {
 }
 
 // 修改
+
+// @Summary Post variable
+// @Description Post variable
+// @Tags variable
+// @Produce json
+// @Param Authorization header string true "Authorization token"
+// @Param variable body model.Variable true "reqData body"
+// @Param id path string true "variable id"
+// @Success 200 json string Response
+// @Failure 400 json string Response
+// @Router /variable/{id} [post]
 func PostVariable(c *gin.Context) {
 	var id = c.Param("id")
 	var variable model.Variable
@@ -38,6 +59,16 @@ func PostVariable(c *gin.Context) {
 }
 
 // 删除
+
+// @Summary Delete variable
+// @Description Delete variable
+// @Tags variable
+// @Produce json
+// @Param Authorization header string true "Authorization token"
+// @Param id path string true "variable id"
+// @Success 200 json string Response
+// @Failure 400 json string Response
+// @Router /variable/{id} [delete]
 func DeleteVariable(c *gin.Context) {
 	var idStr = c.Param("id")
 	var id = bson.ObjectIdHex(idStr)
@@ -56,6 +87,15 @@ func DeleteVariable(c *gin.Context) {
 }
 
 // 列表
+
+// @Summary Get variable  list
+// @Description Get variable  list
+// @Tags variable
+// @Produce json
+// @Param Authorization header string true "Authorization token"
+// @Success 200 json string Response
+// @Failure 400 json string Response
+// @Router /variables [get]
 func GetVariableList(c *gin.Context) {
 	list := model.GetVariableList()
 	HandleSuccessData(c, list)
